# Phytomni-Web

./: .gitignore  README.md  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
chat-ai/: .env.dev  .env.dev.example  .eslintrc.cjs  NEW_PAGES_SUMMARY.md  PARALLEL_CHAT_FEATURES.md  README.md  env.d.ts  index.html  package-lock.json  package.json  tsconfig.config.json  tsconfig.json  vite.config.ts
chat-ai/src/: App.vue  main.ts  permission.ts
chat-ai/src/api/: auth.ts  chat.ts  feedback.ts  gene-display.ts  login.ts  task-manager.ts  taskManagement.ts
chat-ai/src/assets/: base.css  main.css  theme.css
chat-ai/src/components/: DeepGenomeResultViewer.vue  Footer.vue  HelloWorld.vue  Hha.vue  LangSwitch.vue  MarkdownViewer.vue  Protein3DViewer.vue  ThemeSwitch.vue
chat-ai/src/directive/: index.ts
chat-ai/src/layout/: index.vue
chat-ai/src/locales/: index.ts
chat-ai/src/router/: index.ts
chat-ai/src/stores/: app.ts  counter.ts  index.ts  permission.ts  theme.ts  user.ts
chat-ai/src/types/: axios.d.ts  vue-jsx.d.ts
chat-ai/src/utils/: auth.ts  errorCode.ts  index.ts  request.js  request.ts  type.d.ts
chat-ai/vite/plugins/: index.js
nky_client_go/: API_DOC.md  Dockerfile  README.md  go.mod  go.sum  main.go  template.docx
nky_client_go/cache/: client.go  redis.go
nky_client_go/commands/: serve.go
nky_client_go/common/: const.go  request.go  response.go
nky_client_go/common/document_format/: format.go
nky_client_go/common/email/: email_send.go
nky_client_go/config/: app.yml  app.yml.example
nky_client_go/cron/: cron.go  ga.go  ga_log.go  test.go  token.go
nky_client_go/db/: logger.go  mysql.go
nky_client_go/html/: ai_dialogue.html  ai_dialogue2.html  ai_login.html
nky_client_go/http/router/: api.go  router.go
nky_client_go/middleware/: jwt.go  middleware.go  operation_log.go
nky_client_go/model/: base.go  sql_operation_log.go  table.go
nky_client_go/server/: http.go
nky_client_go/server/middleware/: gin.go
nky_client_go/utils/: config.go  file.go  validator.go
nky_client_python/: .env  .env.example  README.md  client_log.py  main.py  models.py  nky_client.py  pyproject.toml  tool_format_processing.py
scripts/: install_git_hooks.sh  scan_secrets.py  validate_web_local.sh
scripts/tests/: test_scan_secrets.py
(+88 files in other folders)
