[project]
name = "nky_client_python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "docx>=0.2.4",
    "dotenv>=0.9.9",
    "esdk-obs-python>=3.25.3",
    "fastapi>=0.115.12",
    "jwt>=1.3.1",
    "markitdown[all]>=0.1.2",
    "mcp>=1.8.0",
    "notebook>=7.4.4",
    "openai>=1.78.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pdfplumber>=0.11.6",
    "pyjwt>=2.10.1",
    "pymysql>=1.1.1",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "python-pptx>=1.0.2",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.40",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
